--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^7.1.5",
+    "body-parser": "^1.19.0",
     "config.js": "^0.1.0",
+    "cookie-parser": "^1.4.5",
     "discord.js": "^12.5.3",
-    "other": "^1.0.3"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
+    "other": "^1.0.3",
+    "pug": "^3.0.2"
   }
 }
